--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,25 @@
     
     \item
     
-    \item 
+    \item To get the moment generating function of a random variable $ X $, we do:
+    
+    $$ M_{X} (s) = E[e^{sX}] = \int_{-\infty}^{\infty} e^{s x} f_{X} (x) dx $$
+    
+    Note for Laplace transform:
+    
+    $$ L\{f(x)\}  = \int_{-\infty}^{\infty} e^{-sx} f(x) dx $$
+    
+    Therefore:
+    
+    $$ M_{X} (s) = L\{f_{X} (x)\}(-s) $$
+    
+    $ M_{X} (s) $ can be made into the following form:
+    
+    $$ M_{X} (-s) = \frac{2}{3} \cdot \frac{1}{s + 2} + 2 \cdot \frac{1}{s + 3} $$
+    
+    Note $ \frac{1}{s - a} $ is the Laplace transform of $ e^{at} $:
+    
+    $$ L^{-1} \{M_{X} (-s)\}  = \frac{2}{3} e^{-2x} + 2 e^{-3x} = f_{X}(x) $$
     
     \item An exponential random variable with parameter $ \lambda $ has the PDF of $ \lambda e^{-\lambda x}, x \geq 0 $.
     
@@ -88,12 +106,28 @@
     
     $$ E[X^5] = \int_{0}^{\infty} x^5 \lambda e^{-\lambda x} dx  = -x^5 e^{-\lambda x}\Big|_{0}^{\infty} + \int_{0}^{\infty} 5 x^4 e^{-\lambda x} dx  =   0 + \frac{5}{\lambda} \int_{0}^{\infty} x^4 \lambda e^{-\lambda x} dx = \frac{5}{\lambda} \cdot \frac{24}{\lambda^3} = \frac{120}{\lambda^5} $$
     
-    $$ E[X^5] = \int_{0}^{\infty} x^5 \lambda e^{-\lambda x} dx $$
-    
     \item \begin{enumerate}
-        \item 
+        \item The PDF of the standard normal is:
         
-        \item
+        $$ f_{X} (x) = \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} $$
+        
+        Which integrates to 1:
+        
+        $$ \int_{-\infty}^{\infty} \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx = 1 $$
+        
+        From $ Var[X] = E[X^2] - E[X]^2, E[X] = 0 $:
+        
+        $$ E[X^2] = 1 = \int_{-\infty}^{\infty} x^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx $$
+        
+        To find $ E[X^3] $, using integration by parts and the result from $ E[X^2] $:
+        
+        $$ E[X^3] = \int_{-\infty}^{\infty} x^3 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx = -\frac{x^2}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} \Big|_{-\infty}^{\infty} + 2 \int_{-\infty}^{\infty} x \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx = 0 $$
+        
+        To find $ E[X^4] $, using integration by parts and the result from $ E[X^3] $:
+        
+        $$ E[X^4] = \int_{-\infty}^{\infty} x^4 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx = -\frac{x^3}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} \Big|_{-\infty}^{\infty} + 3 \int_{-\infty}^{\infty} x^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx = 0 + 3 \cdot 1 = 3 $$
+        
+        \item $$ \rho(X, Y) = \frac{E[X - \mu_{X}]E[Y - \mu_{Y}]}{\sigma_{X}\sigma_{Y}} $$
         
     \end{enumerate}
     
