Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,11 @@
 
 \usepackage{amsmath}
 
+\usepackage{amssymb}
+
 \usepackage{booktabs}
+
+\usepackage{pifont}
 
 \pagestyle{fancy}
 \lhead{}
@@ -58,11 +62,51 @@
         
         $$ e^{-1} = \lim_{n\to\infty} (1 + \frac{1}{n})^{-n} = \lim_{n\to\infty} (\frac{1}{1+\frac{1}{n}})^{n} = \lim_{n\to\infty} (\frac{n}{n+1})^{n} = \lim_{n\to\infty} (\frac{n+1}{n+1} - \frac{1}{n+1})^{n} $$
         
-        $$ \text{As } n \to\infty, n+1 \to n, \text{therefore} \lim_{n\to\infty} (\frac{n+1}{n+1} - \frac{1}{n+1})^{n} = \lim_{n\to\infty} (1 - \frac{1}{n})^{n} = \lim_{n\to\infty} (1-\frac{1}{n})^n $$ 
+        As $ n \to\infty, n+1 \to n, $
+        
+        Therefore:
+        
+        $$ \lim_{n\to\infty} (\frac{n+1}{n+1} - \frac{1}{n+1})^{n} = \lim_{n\to\infty} (1 - \frac{1}{n})^{n} = \lim_{n\to\infty} (1-\frac{1}{n})^n $$
         
     \end{enumerate}
     
-    \item
+    \newpage
+    
+    \item Draw a table to list the distribution, sum up the corresponding probabilities:
+    
+    \begin{table}[ht]
+    \centering
+    \begin{tabular}{@{}lllll@{}}
+    \toprule
+    Number of balls in each cell & Associated probability for such distribution & ${X_3=0}$ & ${X_3=1}$ & ${X_3=2}$ \\ \midrule
+    $(1,1,1,1,1,1,1)$              &  $\frac{1}{13}$                           & \ding{52} &  &  \\ \midrule
+    $(2,1,1,1,1,1)$                &  $\frac{1}{13}$                             & \ding{52} &  &  \\ \midrule
+    $(3,1,1,1,1)$                 &   $\frac{1}{13}$                          &  & \ding{52} &  \\ \midrule
+    $(4,1,1,1)$                    &  $\frac{1}{13}$                         & \ding{52} &  &  \\ \midrule
+    $(5,1,1)$                     &   $\frac{1}{13}$                                & \ding{52} &  &  \\ \midrule
+    $(6,1)$                        &  $\frac{1}{13}$                           &\ding{52}  &  &  \\ \midrule
+    $(7)$                          &  $\frac{1}{13}$                              & \ding{52} &  &  \\ \midrule
+    $(2,2,1,1,1)$                  &  $\frac{1}{13}$                           & \ding{52} &  &  \\ \midrule
+    $(2,3,1,1)$                    &  $\frac{1}{13}$                                 &  &\ding{52}  &  \\ \midrule
+    $(2,4,1)$                      &  $\frac{1}{13}$                                 &\ding{52}  &  &  \\ \midrule
+    $(3,3,1)$                      &  $\frac{1}{13}$                              &  &  & \ding{52} \\ \midrule
+    $(2,5)$                        &  $\frac{1}{13}$                           &  &  &  \\ \midrule
+    $(3,4)$                        &  $\frac{1}{13}$                                 &  & \ding{52} &  \\ \bottomrule
+    \end{tabular}
+    \end{table}
+    
+    Hence:
+    
+    \begin{table}[ht]
+    \centering
+    \begin{tabular}{ll}
+    \toprule
+    Pr(${X_3=0}$) & $\frac{8}{13}$ \\ \midrule
+    Pr(${X_3=1}$) & $\frac{3}{13}$ \\ \midrule
+    Pr(${X_3=2}$) & $\frac{1}{13}$ \\ \midrule
+    Pr(${X_3=n|n\geq3}$) & $0$ \\ \bottomrule
+    \end{tabular}
+    \end{table}
     
     \item To get the moment generating function of a random variable $ X $, we do:
     
@@ -117,7 +161,12 @@
         
         From $ Var[X] = E[X^2] - E[X]^2, E[X] = 0 $:
         
-        $$ E[X^2] = 1 = \int_{-\infty}^{\infty} x^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx $$
+        \begin{equation*}
+            \begin{aligned}
+            E[X^2] &= 1 \\
+            &= \int_{-\infty}^{\infty} x^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx
+            \end{aligned}
+        \end{equation*}
         
         To find $ E[X^3] $, using integration by parts and the result from $ E[X^2] $:
         
@@ -127,7 +176,42 @@
         
         $$ E[X^4] = \int_{-\infty}^{\infty} x^4 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx = -\frac{x^3}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} \Big|_{-\infty}^{\infty} + 3 \int_{-\infty}^{\infty} x^2 \frac{1}{\sqrt{2\pi}} e^{-\frac{1}{2} x^2} dx = 0 + 3 \cdot 1 = 3 $$
         
-        \item $$ \rho(X, Y) = \frac{E[X - \mu_{X}]E[Y - \mu_{Y}]}{\sigma_{X}\sigma_{Y}} $$
+        \item Given $Y = a + b X + c X^2 $:
+        
+        \begin{equation*}
+            \begin{aligned}
+            E[Y] &= E[a + b X + c X^2] \\
+            &= E[a] + E[b X] + E[c X^2] \\
+            &= a + b E[X] + c E[X^2] \\
+            &= a + 0 + c \\
+            &= a + c
+            \end{aligned}
+        \end{equation*}
+        
+        To find $ \sigma_{Y} $:
+        
+        \begin{equation*}
+            \begin{aligned}
+            Var[Y] &= E[Y^2] - E[Y]^2 \\
+            &= E[(a + b X + c X^2)^2] - (a + c) \\
+            &= E[a^2 + a b X + a c X^2 + a b X + b^2 X^2 + b c X^3 + a c X^2 + b c X^3 + c^2 X^4] - (a + c) \\
+            &= a^2 + 0 + ac + 0 + b^2 + 0 + a c + 0 + 3 c^2 - (a + c) \\
+            &= a^2 + 2 a c + b^2 + 3 c^2 - a - c \\
+            \sigma_{Y} &= \sqrt{Var[Y]} = \sqrt{a^2 + 2 a c + b^2 + 3 c^2 - a - c}
+            \end{aligned}
+        \end{equation*}
+        
+        Hence:
+        
+        \begin{equation*}
+            \begin{aligned}
+                \rho(X, Y) &= \frac{E[(X - \mu_{X})(Y - \mu_{Y})]}{\sigma_{X}\sigma_{Y}} \\
+                &= \frac{E[X(a + b X + c X^2 - a - c)]}{\sqrt{a^2 + 2 a c + b^2 + 3 c^2 - a - c}} \\
+                &= \frac{E[b X^2 + c X^3 - c X]}{\sqrt{a^2 + 2 a c + b^2 + 3 c^2 - a - c}} \\
+                &= \frac{-c E[X] + b E[X^2] + c E[X^3]}{\sqrt{a^2 + 2 a c + b^2 + 3 c^2 - a - c}} \\
+                &= \frac{b}{\sqrt{a^2 + 2 a c + b^2 + 3 c^2 - a - c}}
+            \end{aligned}
+        \end{equation*}
         
     \end{enumerate}
     
